--- a/docker/exercicio-3/web/Dockerfile
+++ b/docker/exercicio-3/web/Dockerfile
@@ -1,24 +1,27 @@
-# Usa imagem oficial do Python
-FROM python:3.11-slim
-
-# Define o diretório de trabalho
+# Estágio Base
+FROM python:3.11-alpine AS base
 WORKDIR /app
-
-# Copia o arquivo de dependências
 COPY requirements.txt .
 
-# Instala as dependências
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copia o código da aplicação
-COPY app.py .
-
-# Expõe a porta 8000
-EXPOSE 8000
-
-# Define variável de ambiente para Python
+# Estágio de Desenvolvimento
+FROM base AS dev
+RUN pip install --no-cache-dir -r requirements.txt flask[async]
+ENV FLASK_ENV=development
+ENV FLASK_DEBUG=1
 ENV PYTHONUNBUFFERED=1
-ENV PORT=8000
+EXPOSE 8000
+CMD ["flask", "run", "--host=0.0.0.0", "--port=8000", "--reload"]
 
-# Comando para iniciar a aplicação
-CMD ["python", "app.py"]
+# Estágio de Produção
+FROM base AS prod
+RUN pip install --no-cache-dir -r requirements.txt && \
+    pip install gunicorn && \
+    addgroup -g 1000 appuser && \
+    adduser -D -u 1000 -G appuser appuser
+COPY app.py .
+RUN chown -R appuser:appuser /app
+USER appuser
+ENV PYTHONUNBUFFERED=1
+ENV FLASK_ENV=production
+EXPOSE 8000
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "2", "--threads", "2", "app:app"]
