--- a/docker/exercicio-1/docker-compose.yml
+++ b/docker/exercicio-1/docker-compose.yml
@@ -6,4 +6,8 @@ services:
     container_name: exercicio-1-nodejs
     ports:
       - "3000:3000"
+    # Volume para desenvolvimento (opcional - permite edição em tempo real)
+    # volumes:
+    #   - .:/app
+    #   - /app/node_modules
     restart: unless-stopped
