--- a/docker/exercicio-3/docker-compose.dev.yml
+++ b/docker/exercicio-3/docker-compose.dev.yml
@@ -1,10 +1,9 @@
-version: '3.8'
-
 services:
-  # Serviço Web (Flask API)
   web:
-    build: ./web
-    container_name: todo-api
+    build:
+      context: ./web
+      target: dev
+    container_name: todo-api-dev
     ports:
       - "8000:8000"
     environment:
@@ -13,22 +12,27 @@ services:
       - DB_NAME=tododb
       - DB_USER=postgres
       - DB_PASSWORD=postgres123
+      - FLASK_APP=app.py
+      - FLASK_ENV=development
+      - FLASK_DEBUG=1
+    volumes:
+      - ./web:/app
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - app-network
     restart: unless-stopped
 
-  # Serviço de Banco de Dados (PostgreSQL)
   db:
     image: postgres:15-alpine
-    container_name: todo-db
+    container_name: todo-db-dev
     environment:
       - POSTGRES_DB=tododb
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres123
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-data-dev:/var/lib/postgresql/data
       - ./init-db:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
@@ -41,10 +45,9 @@ services:
       timeout: 5s
       retries: 5
 
-  # Adminer (Interface Web para gerenciar banco de dados)
   adminer:
     image: adminer:latest
-    container_name: todo-adminer
+    container_name: todo-adminer-dev
     ports:
       - "8080:8080"
     environment:
@@ -56,10 +59,8 @@ services:
     restart: unless-stopped
 
 volumes:
-  postgres-data:
-    name: todo-postgres-data
+  postgres-data-dev:
 
 networks:
   app-network:
     driver: bridge
-    name: todo-network
